Implementação e configuração do JSF e do template com barra de navegação

--- a/saara/.classpath
+++ b/saara/.classpath
@@ -13,5 +13,12 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Mojarra">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+			<attribute name="owner.project.facets" value="jst.jsf"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/afterdark-1.0.10.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
